--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,19 @@
-build/
+# NetBeans specific #
 nbproject/
+build/
+nbbuild/
+dist/
+nbdist/
+nbactions.xml
+nb-configuration.xml
+
+# Class Files #
+*.class
+
+# Package Files #
+*.jar
+*.war
+*.ear
+
+# Project Specific files #
 src/com/jp32/core/DBManager.java
